[package]
name = "massive-adtack"
version = "0.1.0"
edition = "2024"

[dependencies]
ldap3 = { version = "0.11", features = ["tls"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
serde_json = "1.0"
fake = { version = "2.9", features = ["derive"] }
rand = "0.8"
